<resources>

    <string name="ngr_languageKey">languageKey</string>
    <string name="ngr_locationTypeKey">locationType</string>
    <string name="ngr_mapStyleKey">mapStyleKey</string>

    <string name="app_name">展图</string>
    <string name="ngr_errorMsg">网络错误,请稍后再试</string>
    <string name="ngr_msg_locationing">正在定位,请稍后</string>
    <string name="ngr_msg_locationErr">正在为您定位,请稍后</string>
    <string name="ngr_msg_exit">再按一次，退出程序</string>
    <string name="ngr_nearby">附近</string>
    <string name="ngr_mine">我的</string>
    <string name="ngr_seeDetails">查看详情</string>
    <string name="ngr_exitNavigation">退出导航</string>
    <string name="ngr_startNavigation">开始导航</string>
    <string name="ngr_clearRoute">清除路线</string>
    <string name="ngr_extendinfo_msg_floor">您当前所在的楼层有:</string>
    <string name="ngr_extendinfo_msg_meeting">您关注的会议有:</string>
    <string name="ngr_hide">隐藏</string>
    <string name="ngr_lookInside">进去看看</string>
    <string name="ngr_reload">重新加载</string>
    <string name="ngr_theWay">道路</string>
    <string name="ngr_emptyShop">空铺</string>
    <string name="ngr_sorryLoad">抱歉,加载失败</string>
    <string name="ngr_tool_title">室内导航</string>
    <string name="ngr_progressDialogTitle">提示</string>
    <string name="ngr_progressDialogMsg">加载中…</string>
    <string name="ngr_metres">米</string>
    <string name="ngr_hint_search">请输入关键字搜索</string>
    <string name="ngr_search_type_booth">参展商展位</string>
    <string name="ngr_search_type_meeting">会议议程</string>
    <string name="ngr_search_result_title_meeting">议程/活动匹配</string>
    <string name="ngr_search_result_title_map">地图匹配</string>
    <string name="ngr_msg_navigationComplete">到达目的地附近,导航结束</string>
    <string name="ngr_msg_navigateNotFound">没找到导航线</string>
    <string name="ngr_msg_err_notStartOrEnd">当前没有设置起点或终点</string>
    <string name="ngr_msg_distanceShort">起点终点距离太近,请重新选择</string>
    <string name="ngr_msg_facility_none">当前区域没有该设施</string>
    <string name="ngr_expocenter">世博中心</string>
    <string name="ngr_expoexhibition">世博展览馆H4</string>
    <string name="ngr_poi_info_lable_Booth">展位:</string>
    <string name="ngr_poi_info_lable_net">官网:</string>
    <string name="ngr_msg_outOfNavigation">您已偏移导航线</string>
    <string name="ngr_msg_sub_outOfNavigation">路线重新规划中</string>
    <string name="ngr_txt_clear_history">清空搜索历史</string>
    <string name="ngr_txt_search_history">历史记录</string>
    <string name="ngr_point_starting">设为起点</string>
    <string name="ngr_point_end">设为终点</string>
    <string name="ngr_txt_goHere">去这里</string>
    <string name="ngr_amenities">常用\n设施</string>
    <string name="ngr_routeFailed">网络异常，规划失败</string>
    <string name="ngr_msg_alertOutdoors">若您已在室外，建议选择室外地图服务商为您服务</string>
    <string name="ngr_noResultsFound">无匹配结果!</string>
    <string name="ngr_assign">确定</string>
    <string name="ngr_changeArenaNaviMsg">抱歉,前往该位置请参考上方路线图</string>
    <string name="ngr_minute">分钟</string>
    <string name="ngr_msg_navi_up">即将切换楼层,请向上行</string>
    <string name="ngr_msg_navi_down">即将切换楼层,请向下行</string>
    <string name="ngr_search_activity">活动</string>
    <string name="ngr_search_meeting">议程</string>
    <string name="ngr_search_exbtShop">展商</string>
    <string name="ngr_txt_search_exbt">展商</string>
    <string name="ngr_txt_search_meeting">议程</string>
    <string name="ngr_txt_search_activity">活动</string>
    <string name="ngr_main_tab_exbt">展图</string>
    <string name="ngr_main_tab_exhibition">展会</string>
    <string name="ngr_main_tab_arena">场馆</string>
    <string name="ngr_main_tab_collection">收藏</string>
    <string name="ngr_main_tab_setting">设置</string>
    <string name="taskShare_msg">分享至朋友圈即可在入口处领取小礼品哦</string>
    <string name="taskShare_title">恭喜您完成点亮之旅</string>
    <string name="share2Friends">分享至朋友圈</string>
    <string name="friends">朋友圈</string>
    <string name="share">分享</string>
    <string name="search">搜索</string>
    <string name="please_input_destination">请输入目的地</string>
    <string name="history_search">历史搜索</string>
    <string name="current_no_search_result">抱歉！没有找到相关结果</string>
    <string name="please_input_search_key">请输入搜索关键字</string>
</resources>