<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:paddingLeft="@dimen/ngr_large"
    android:paddingRight="@dimen/ngr_large"
    android:background="@drawable/bg_corner_white"
    android:paddingTop="@dimen/ngr_large">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ico_task_close" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_close"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ngr_large"
        android:text="@string/taskShare_title"
        android:textColor="@color/txt3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ngr_normal"
        android:text="@string/taskShare_msg" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="175dp"
        android:layout_height="36dp"
        android:layout_below="@+id/tv_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ngr_bg_corner_blue"
        android:text="@string/share2Friends"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</RelativeLayout>